--- a/app/globals.css
+++ b/app/globals.css
@@ -24,10 +24,6 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgba(20,7,0,255);
 }
+
