--- a/components/Animations/title.css
+++ b/components/Animations/title.css
@@ -1,56 +1,81 @@
-
 @keyframes fade-in {
-    0% {
-        opacity: 0%;
-    }
-    75% {
-        opacity: 0%;
-    }
-    100% {
-        opacity: 100%;
-    }
+  0% {
+      opacity: 0%;
   }
-  .animate-fade-in {
-    animation: fade-in 3s ease-in-out forwards;
+  75% {
+      opacity: 0%;
   }
-  
-  @keyframes fade-left {
-    0% {
-        transform: translateX(100%);
-        opacity: 0%;
-    }
-    30% {
-        transform: translateX(0%);
-        opacity: 100%;
-    }
-    100% {
-        opacity: 0%;
-    }
+  100% {
+      opacity: 100%;
   }
-  .animate-fade-left {
-    animation: fade-left 3s ease-in-out forwards;
-  }
-  
-  @keyframes title {
-    0% {
-        line-height: 0%;
-        letter-spacing: 0.25em;
-        opacity: 0;
-    }
-    25% {
-        line-height: 0%;
-        opacity: 0%;
-    }
-    80% {
-        opacity: 100%;
-    }
-    100% {
-        line-height: 100%;
-        opacity: 100%;
-    }
-  }
-  .animate-title {
-    animation: title 3s ease-out forwards;
-  }
+}
+.animate-fade-in {
+  animation: fade-in 3s ease-in-out forwards;
+}
 
-  
+@keyframes fade-left {
+  0% {
+      transform: translateX(100%);
+      opacity: 0%;
+  }
+  30% {
+      transform: translateX(0%);
+      opacity: 100%;
+  }
+  100% {
+      opacity: 0%;
+  }
+}
+.animate-fade-left {
+  animation: fade-left 3s ease-in-out forwards;
+}
+
+@keyframes fade-right {
+  0% {
+      transform: translateX(-100%);
+      opacity: 0%;
+  }
+  30% {
+      transform: translateX(0%);
+      opacity: 100%;
+  }
+  100% {
+      opacity: 0%;
+  }
+}
+.animate-fade-right {
+  animation: fade-right 3s ease-in-out forwards;
+}
+
+@keyframes title {
+  0% {
+      line-height: 0%;
+      letter-spacing: 0.25em;
+      opacity: 0;
+  }
+  25% {
+      line-height: 0%;
+      opacity: 0%;
+  }
+  80% {
+      opacity: 100%;
+  }
+  100% {
+      line-height: 100%;
+      opacity: 100%;
+  }
+}
+.animate-title {
+  animation: title 3s ease-out forwards;
+}
+
+@keyframes glow {
+  0%, 100% {
+    text-shadow: 0 0 10px #ff0000, 0 0 20px #00ff00, 0 0 30px #0000ff;
+  }
+  50% {
+    text-shadow: 0 0 20px #00ff00, 0 0 30px #0000ff, 0 0 40px #ff0000;
+  }
+}
+
+
