--- a/components/Animations/title.css
+++ b/components/Animations/title.css
@@ -1,3 +1,19 @@
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(50px); /* Adjust the initial vertical position as needed */
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in-up {
+  animation: fade-in-up 3s ease-in-out forwards;
+}
+
+
 @keyframes fade-in {
   0% {
       opacity: 0%;
